Fixes homepage member spacing

--- a/app/_scss/home/members.scss
+++ b/app/_scss/home/members.scss
@@ -63,7 +63,7 @@
 		margin-bottom: 6%;
 
 		figure {
-			width: 100%; height: 16em;
+			width: 100%; height: 17em;
 			position: relative; top: 0;
 			padding: 0;
 			text-align: left;
@@ -131,19 +131,19 @@
 
 @media (max-width: 849px) {
 	#home #members figure {
-		height: 16em;
+		height: 16.5em;
 	}
 }
 
 @media (max-width: 799px) {
 	#home #members figure {
-		height: 15em;
+		height: 16em;
 	}
 }
 
 @media (max-width: 749px) {
 	#home #members figure {
-		height: 14em;
+		height: 15em;
 	}
 }
 
